--- a/css/login.css
+++ b/css/login.css
@@ -21,7 +21,7 @@ body {
     margin: -160px auto 0;
     width: 600px;
     height: 320px;
-    background-color: #000000 ;
+    background-color: white ;
     border-radius: 5px;
     transition: all 0.5s;
 }
@@ -74,7 +74,7 @@ body {
     font-size: 16px;
     width: 50%;
     height: 100%;
-    color: whitesmoke;
+    color: black;
     opacity: 1;
     transition: all .5s;
 }
@@ -85,7 +85,7 @@ body {
     top: -30px;
     width: 305px;
     height: 380px;
-    background-color: #2eb82e;
+    background-color: #c5591a;
     border-radius: 5px;
     box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.2);
     transition: all .5s;
@@ -107,7 +107,7 @@ body {
 }
 
 .form-item h1{
-    color: #0d0d0d;
+    color: #fff;
     margin: 10px 0 20px;
 }
 
@@ -133,6 +133,12 @@ body {
 .form-item a:hover{
     color: white;
     text-decoration:underline ;
+}
+
+.info-item .btn{
+    background-color: rgb(228, 67, 27) !important;
+    border: 5px solid rgb(228, 67, 27) !important;
+    border-radius: 40px;
 }
 
 .container .container-form .btn{
